--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,6 @@
 
 .inline-task {
   display: flex;
-  /* justify-content: space-between; */
   margin-left: auto;
   margin-right: auto;
   width: 50%;
@@ -75,4 +74,14 @@
   margin-right: 10px;
   margin-top: auto;
   margin-bottom: auto;
+}
+
+.submit-button {
+  color: white;
+  background-color: #09d3ac;
+  border: none;
+  border-radius: 5px;
+  font-weight: 800;
+  margin-left: 1em;
+  padding: 1em;
 }
